Added draft support for the storybook-addon-designs
In order to avoid copy-pasting content between our Figma specifications and Component documentation, created a link between them. Not ideal, because of an iframe experience, but should be good enough for now.

--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -1,5 +1,11 @@
-<Meta title="Documentation" />
+<Meta title="Introduction" />
 
-# Welcome to UI Toolkit Storybook
+# Overview
 
-Storybook helps you build UI components in isolation from your app's business logic, data, and context.
+The CloudBlue Connect platform provides a comprehensive suite of JavaScript UI controls that enables developers to build custom user interfaces quickly and easily. With this library, users can create custom forms and user interfaces with a wide range of components such as buttons, checkboxes, dropdowns, and text fields. This library also features an intuitive API that allows developers to customize the behavior of their UI components to match their application's specific requirements. In addition, this library includes a comprehensive set of tools that help developers optimize performance and speed up development time. With the CloudBlue Connect platform, developers can create modern, powerful, and user-friendly UI controls that are sure to meet their application's needs.
+
+UI controls are a core part of any application's user interface, and the CloudBlue Connect platform provides a set of standards-compliant UI controls that help ensure proper user experience. This library adheres to industry standards such as HTML5, CSS3, and JavaScript, allowing developers to create consistent and intuitive user interfaces across all platforms. Furthermore, the library makes use of modern technologies, providing developers with a cutting-edge set of tools to create beautiful and responsive user interfaces. With the CloudBlue Connect platform, developers can create user interfaces that are both reliable and user friendly.
+
+# Questions?
+
+Reach out to the CloudBlue team on [Github](https://github.com/cloudblue/connect-ui-toolkit)
