--- a/src/stories/Card.mdx
+++ b/src/stories/Card.mdx
@@ -1,6 +1,5 @@
-
-import { Meta, ArgsTable } from "@storybook/addon-docs/blocks";
-import { Figma } from "storybook-addon-designs/blocks";
+import { Meta, ArgsTable } from "@storybook/blocks";
+import { Figma } from "@storybook/addon-designs/blocks";
 
 <Meta title="Components/Card/Design" />
 
